TestSuite/PascalABCTests/errors/err0287.pas
const
  TempFile: string = System.Environment.CurrentDirectory;

begin
  writeln(TempFile);
  writeln(TempFile);
end.